[package]
name = "isso"
version = "0.1.0"
edition = "2021"
description = "A lightweight, self-hosted commenting service"
license = "MIT"
repository = "https://github.com/jelmer/isso-rs"
homepage = "https://github.com/jelmer/isso-rs"
readme = "README.md"
keywords = ["comments", "isso", "sqlite", "axum"]
categories = ["web-programming::http-server"]
# Published-crate contents. Everything outside this list (Makefile, docker,
# docs, JS tests, etc.) is only useful from a git checkout and stays out
# of the crates.io tarball.
include = [
    "/src/**",
    "/templates/**",
    "/static/css/**",
    "/static/demo/**",
    "/static/img/**",
    # JS client — bundles (embed.min.js / count.min.js / .dev variants) and
    # the underlying app/ sources. We deliberately skip static/js/tests/
    # and the jest/webpack configs: those are only useful from a checkout.
    "/static/js/*.js",
    "/static/js/app/**/*.js",
    "/static/js/app/**/*.svg",
    "/Cargo.toml",
    "/Cargo.lock",
    "/isso.cfg",
    "/README.md",
    "/LICENSE",
]

[lib]
# The package is published as "isso" on crates.io but the Rust lib name
# stays "isso_rs" so existing `use isso_rs::...` paths in tests and main.rs
# keep working without a bulk rename.
name = "isso_rs"
path = "src/lib.rs"

[[bin]]
name = "isso"
path = "src/main.rs"

[dependencies]
ammonia = "4"
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
hex = "0.4"
hmac = "0.12"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"] }
lettre = { version = "0.11", default-features = false, features = [
    "builder",
    "smtp-transport",
    "tokio1",
    "tokio1-rustls",
    "rustls-native-certs",
    "ring",
] }
md-5 = "0.10"
minijinja = { version = "2", features = ["loader"] }
pbkdf2 = "0.12"
quick-xml = "0.36"
pulldown-cmark = "0.12"
rand = "0.8"
regex = "1"
rust-ini = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
urlencoding = "2"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.5", features = ["util"] }
