[package]
name = "isso-rs"
version = "0.1.0"
edition = "2021"
description = "Rust port of the Isso comment server"
license = "MIT"

[[bin]]
name = "isso-rs"
path = "src/main.rs"

[dependencies]
ammonia = "4"
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
hex = "0.4"
hmac = "0.12"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"] }
lettre = { version = "0.11", default-features = false, features = [
    "builder",
    "smtp-transport",
    "tokio1",
    "tokio1-rustls",
    "rustls-native-certs",
    "ring",
] }
md-5 = "0.10"
minijinja = { version = "2", features = ["loader"] }
pbkdf2 = "0.12"
quick-xml = "0.36"
pulldown-cmark = "0.12"
rand = "0.8"
regex = "1"
rust-ini = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
urlencoding = "2"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.5", features = ["util"] }
